--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,9 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
@@ -18,7 +21,9 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
-    "nodemailer": "^7.0.12",
+    "nodemailer": "^7.0.12"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.11"
   }
 }
